credential correction, docker-compose runs succesfully

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# PostgreSQL environment variables
-PG_USER=your_username      # add your actual postgresql username
-PG_PASSWORD=your_password  # add your actual postgresql password
-PG_DB=your_database        # add your actual postgresql name
+# # PostgreSQL environment variables
+# PG_USER=your_username      # add your actual postgresql username
+# PG_PASSWORD=your_password  # add your actual postgresql password
+# PG_DB=your_database        # add your actual postgresql name
