--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,17 @@
-version: '3.8'
-
 services:
-  postgres:
+  db:
     image: postgres:17.2-alpine3.21
     container_name: postgresdb_composed
     restart: always # to restart in case the docker crashes
     shm_size: '64mb' # limit the memory size
     cpus: "1.0"
-    env_file:
-    - .env
+    env_file: .env # to specify another env_file run the command: docker-compose --env-file YOUR_FILE up -d
     environment:
-    - POSTGRES_USER= ${PG_USER}
-    - POSTGRES_PASSWORD= ${PG_PASSWORD}
-    - POSTGRES_DB= ${PG_DB}
-    - PGUSER= ${PG_USER} 
+      POSTGRES_USER: ${PG_USER}
+      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_DB: ${PG_DB}
+      PGUSER: ${PG_USER}
     ports:
-    - "5431:5432" # port mapping, it could be kept as default if the default isn't taken locally
+    - "5432:5432" # port mapping, it could be kept as default if the default isn't taken locally
     volumes:
     - ./postgres-data:/var/lib/postgresql/data # to save the data locally in case the container is deleted
